--- a/sources/api/apiserver/Cargo.toml
+++ b/sources/api/apiserver/Cargo.toml
@@ -10,7 +10,10 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
+actix = { version = "0.12", default-features = false, features = ["macros"] }
 actix-web = { version = "4.0.0-beta.5", default-features = false }
+actix-web-actors = { version = "4.0.0-beta.5", default-features = false }
+bytes = "1.1"
 bottlerocket-release = { path = "../../bottlerocket-release", version = "0.1.0" }
 datastore = { path = "../datastore", version = "0.1.0" }
 fs2 = "0.4.3"
@@ -22,6 +25,7 @@ models = { path = "../../models", version = "0.1.0" }
 nix = "0.22"
 num = "0.4"
 percent-encoding = "2.1"
+rand = "0.8"
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
