--- a/packages/kubernetes-1.18/kubernetes-tmpfiles.conf
+++ b/packages/kubernetes-1.18/kubernetes-tmpfiles.conf
@@ -3,3 +3,5 @@ L /etc/kubernetes/manifests - - - - static-pods
 d /var/lib/kubelet/providers/secrets-store - - - -
 L /etc/kubernetes/secrets-store-csi-providers  - - - - /var/lib/kubelet/providers/secrets-store
 r! /var/lib/kubelet/cpu_manager_state
+d /var/lib/kubelet/node-feature-discovery/features.d - - - -
+L /etc/kubernetes/node-feature-discovery/features.d - - - - /var/lib/kubelet/node-feature-discovery/features.d
