build: use faster serial console
Existing variant platforms all support the 115200 speed for the guest
serial device.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/variants/aws-ecs-1/Cargo.toml
+++ b/variants/aws-ecs-1/Cargo.toml
@@ -8,7 +8,7 @@ build = "build.rs"
 [package.metadata.build-variant]
 kernel-parameters = [
     "console=tty0",
-    "console=ttyS0",
+    "console=ttyS0,115200n8",
 ]
 included-packages = [
 # core
