--- a/variants/aws-dev/Cargo.toml
+++ b/variants/aws-dev/Cargo.toml
@@ -10,7 +10,7 @@ exclude = ["README.md"]
 [package.metadata.build-variant]
 kernel-parameters = [
     "console=tty0",
-    "console=ttyS0",
+    "console=ttyS0,115200n8",
     # Only reserve if there are at least 2GB
     "crashkernel=2G-:256M"
 ]
