--- a/variants/aws-k8s-1.19/Cargo.toml
+++ b/variants/aws-k8s-1.19/Cargo.toml
@@ -12,7 +12,7 @@ exclude = ["README.md"]
 [package.metadata.build-variant]
 kernel-parameters = [
     "console=tty0",
-    "console=ttyS0",
+    "console=ttyS0,115200n8",
 ]
 included-packages = [
     "aws-iam-authenticator",
