--- a/variants/aws-k8s-1.21/Cargo.toml
+++ b/variants/aws-k8s-1.21/Cargo.toml
@@ -20,7 +20,7 @@ included-packages = [
 ]
 kernel-parameters = [
     "console=tty0",
-    "console=ttyS0",
+    "console=ttyS0,115200n8",
 ]
 
 [lib]
