--- a/variants/vmware-k8s-1.21/Cargo.toml
+++ b/variants/vmware-k8s-1.21/Cargo.toml
@@ -13,7 +13,7 @@ exclude = ["README.md"]
 image-format = "vmdk"
 supported-arches = ["x86_64"]
 kernel-parameters = [
-    "console=ttyS0",
+    "console=ttyS0,115200n8",
     "console=tty1",
     # Only reserve if there are at least 2GB
     "crashkernel=2G-:256M"
