--- a/packages/release/prepare-local.service
+++ b/packages/release/prepare-local.service
@@ -43,6 +43,14 @@ ExecStart=/usr/bin/mkdir -p \
     ${LOCAL_DIR}/var/lib/kernel-devel/.overlay/upper \
     ${LOCAL_DIR}/var/lib/kernel-devel/.overlay/work
 
+# Create the directories we need to set up a read-write overlayfs for any CNI
+# plugin binaries.
+ExecStart=/usr/bin/rm -rf ${LOCAL_DIR}/opt/cni ${LOCAL_DIR}/var/lib/cni-plugins
+ExecStart=/usr/bin/mkdir -p \
+    ${LOCAL_DIR}/opt/cni/bin \
+    ${LOCAL_DIR}/var/lib/cni-plugins/.overlay/upper \
+    ${LOCAL_DIR}/var/lib/cni-plugins/.overlay/work \
+
 RemainAfterExit=true
 StandardError=journal+console
 
