--- a/packages/release/activate-configured.service
+++ b/packages/release/activate-configured.service
@@ -6,7 +6,7 @@ Requires=preconfigured.target
 [Service]
 Type=oneshot
 ExecStart=/usr/bin/systemctl set-default configured
-ExecStart=/usr/bin/systemctl isolate default
+ExecStart=/usr/bin/systemctl isolate default --no-block
 RemainAfterExit=true
 StandardError=journal+console
 
