wicked: increase logging for dhcp4 and dhcp6
Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/wicked/wickedd-dhcp4.service
+++ b/packages/wicked/wickedd-dhcp4.service
@@ -8,6 +8,6 @@ PartOf=wickedd.service
 [Service]
 Type=notify
 LimitCORE=infinity
-ExecStart=/usr/libexec/wicked/bin/wickedd-dhcp4 --systemd --foreground
+ExecStart=/usr/libexec/wicked/bin/wickedd-dhcp4 --systemd --foreground --log-level debug --debug most
 StandardError=null
 Restart=on-abort
