--- a/packages/release/prepare-local.service
+++ b/packages/release/prepare-local.service
@@ -39,9 +39,9 @@ ExecStart=/usr/bin/mkdir -p ${LOCAL_DIR}/var ${LOCAL_DIR}/opt ${LOCAL_DIR}/mnt
 # development sources.
 ExecStart=/usr/bin/rm -rf ${LOCAL_DIR}/var/lib/kernel-devel
 ExecStart=/usr/bin/mkdir -p \
-    ${LOCAL_DIR}/var/lib/kernel-devel/lower \
-    ${LOCAL_DIR}/var/lib/kernel-devel/upper \
-    ${LOCAL_DIR}/var/lib/kernel-devel/work
+    ${LOCAL_DIR}/var/lib/kernel-devel/.overlay/lower \
+    ${LOCAL_DIR}/var/lib/kernel-devel/.overlay/upper \
+    ${LOCAL_DIR}/var/lib/kernel-devel/.overlay/work
 
 RemainAfterExit=true
 StandardError=journal+console
