--- a/sources/imdsclient/Cargo.toml
+++ b/sources/imdsclient/Cargo.toml
@@ -16,6 +16,7 @@ reqwest = { version = "0.11.1", default-features = false }
 serde_json = "1"
 snafu = "0.6"
 tokio = { version = "~1.8", default-features = false, features = ["macros", "rt-multi-thread", "time"] }  # LTS
+tokio-retry = "0.3"
 url = "2.1.1"
 
 [build-dependencies]
