--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "aws-k8s-1.19",
     "aws-k8s-1.20",
     "aws-k8s-1.21",
+    "metal-dev",
     "vmware-dev",
     "vmware-k8s-1.20",
     "vmware-k8s-1.21",
