variants: Add metal-k8s-1.21 variant
This change adds an additional variant `metal-k8s-1.21`, which includes
necessary Kubernetes packages and settings for running Bottlerocket on
metal in a Kubernetes cluster.

--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "aws-k8s-1.20",
     "aws-k8s-1.21",
     "metal-dev",
+    "metal-k8s-1.21",
     "vmware-dev",
     "vmware-k8s-1.20",
     "vmware-k8s-1.21",
