--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,9 @@ jobs:
           - variant: metal-dev
             arch: x86_64
             supported: false
+          - variant: metal-k8s-1.21
+            arch: x86_64
+            supported: false
           - variant: vmware-k8s-1.20
             arch: x86_64
             supported: true
