packages: add hotdog
hotdog provides oci hooks to apply the hotpatch for Apache log4j2, to
containers running JVM machines

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/packages/release/Cargo.toml
+++ b/packages/release/Cargo.toml
@@ -28,6 +28,7 @@ glibc = { path = "../glibc" }
 grep = { path = "../grep" }
 grub = { path = "../grub" }
 host-ctr = { path = "../host-ctr" }
+hotdog = { path = "../hotdog" }
 iproute = { path = "../iproute" }
 iptables = { path = "../iptables" }
 kexec-tools = { path = "../../packages/kexec-tools" }
