api: add oci-hooks setting to enable OCI hooks
The oci-hooks setting allows a user to enable OCI hooks provided by the
OS. For the time being, the only OCI hook provided is the
`log4j2-hotpatch`, which applies the hotpatch for Apache Log4j2 to
containers running JVMs.

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/Release.toml
+++ b/Release.toml
@@ -82,3 +82,7 @@ version = "1.4.2"
     "migrate_v1.4.2_admin-container-v0-7-3.lz4",
     "migrate_v1.4.2_control-container-v0-5-3.lz4",
 ]
+"(1.4.2, 1.5.0)" = [
+    "migrate_v1.5.0_oci-hooks-setting.lz4",
+    "migrate_v1.5.0_oci-hooks-setting-metadata.lz4",
+]
