--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -31,6 +31,8 @@ members = [
     "api/migration/migrations/v1.4.0/registry-mirror-representation",
     "api/migration/migrations/v1.4.2/admin-container-v0-7-3",
     "api/migration/migrations/v1.4.2/control-container-v0-5-3",
+    "api/migration/migrations/v1.5.0/oci-hooks-setting",
+    "api/migration/migrations/v1.5.0/oci-hooks-setting-metadata",
 
     "bottlerocket-release",
 
