--- a/packages/release/prepare-boot.service
+++ b/packages/release/prepare-boot.service
@@ -5,7 +5,7 @@ RefuseManualStop=true
 
 [Service]
 Type=oneshot
-# We need a helper progam to mount the boot partition since it isn't
+# We need a helper program to mount the boot partition since it isn't
 # trivial to figure out which partition set is active
 ExecStart=/usr/bin/prairiedog prepare-boot
 RemainAfterExit=true
