--- a/Release.toml
+++ b/Release.toml
@@ -86,3 +86,6 @@ version = "1.5.0"
     "migrate_v1.5.0_oci-hooks-setting.lz4",
     "migrate_v1.5.0_oci-hooks-setting-metadata.lz4",
 ]
+"(1.5.0, 1.5.1)" = [
+    "migrate_v1.5.1_control-container-v0-5-4.lz4",
+]
