--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -33,6 +33,7 @@ members = [
     "api/migration/migrations/v1.4.2/control-container-v0-5-3",
     "api/migration/migrations/v1.5.0/oci-hooks-setting",
     "api/migration/migrations/v1.5.0/oci-hooks-setting-metadata",
+    "api/migration/migrations/v1.5.1/control-container-v0-5-4",
 
     "bottlerocket-release",
 
