grub: Add "console" to `terminal_output` command for BIOS systems
This change adds the local console to the list of terminals to which
grub will send output.

--- a/packages/grub/bios.cfg
+++ b/packages/grub/bios.cfg
@@ -1,6 +1,6 @@
 set no_modules=y
 serial
-terminal_output serial
+terminal_output serial console
 gptprio.next -d boot_dev -u boot_uuid
 set root=$boot_dev
 set prefix=($root)/grub
