--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
           - variant: vmware-dev
             arch: x86_64
             supported: false
+          - variant: metal-dev
+            arch: x86_64
+            supported: false
           - variant: vmware-k8s-1.20
             arch: x86_64
             supported: true
