--- a/Release.toml
+++ b/Release.toml
@@ -92,4 +92,5 @@ version = "1.5.2"
 "(1.5.1, 1.5.2)" = []
 "(1.5.2, 1.6.0)" = [
     "migrate_v1.6.0_vmware-host-containers.lz4",
+    "migrate_v1.6.0_node-taints-representation.lz4",
 ]
