--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -35,6 +35,7 @@ members = [
     "api/migration/migrations/v1.5.0/oci-hooks-setting-metadata",
     "api/migration/migrations/v1.5.1/control-container-v0-5-4",
     "api/migration/migrations/v1.6.0/vmware-host-containers",
+    "api/migration/migrations/v1.6.0/node-taints-representation",
 
     "bottlerocket-release",
 
