--- a/variants/aws-k8s-1.21-nvidia/Cargo.toml
+++ b/variants/aws-k8s-1.21-nvidia/Cargo.toml
@@ -9,6 +9,9 @@ build = "build.rs"
 # Don't rebuild crate just because of changes to README.
 exclude = ["README.md"]
 
+[package.metadata.build-variant.image-layout]
+os-image-size-gib = 4
+
 [package.metadata.build-variant]
 included-packages = [
     "aws-iam-authenticator",
