--- a/sources/api/apiserver/Cargo.toml
+++ b/sources/api/apiserver/Cargo.toml
@@ -11,8 +11,9 @@ exclude = ["README.md"]
 
 [dependencies]
 actix = { version = "0.12", default-features = false, features = ["macros"] }
-actix-web = { version = "4.0.0-beta.5", default-features = false }
-actix-web-actors = { version = "4.0.0-beta.5", default-features = false }
+actix-rt = "2"
+actix-web = { version = "4.0.0-rc.2", default-features = false }
+actix-web-actors = { version = "4.0.0-beta.11", default-features = false }
 bytes = "1.1"
 bottlerocket-release = { path = "../../bottlerocket-release", version = "0.1.0" }
 datastore = { path = "../datastore", version = "0.1.0" }
