--- a/Release.toml
+++ b/Release.toml
@@ -95,4 +95,8 @@ version = "1.5.3"
 ]
 "(1.5.3, 1.6.0)" = [
     "migrate_v1.6.0_node-taints-representation.lz4",
+    "migrate_v1.6.0_aws-admin-container-v0-7-4.lz4",
+    "migrate_v1.6.0_aws-control-container-v0-5-5.lz4",
+    "migrate_v1.6.0_public-admin-container-v0-7-4.lz4",
+    "migrate_v1.6.0_public-control-container-v0-5-5.lz4",
 ]
