Add aws-k8s-1.22 variant
Adds aws-k8s-1.22 variant, relinks symlinks in models

--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "aws-k8s-1.19",
     "aws-k8s-1.20",
     "aws-k8s-1.21",
+    "aws-k8s-1.22",
     "metal-dev",
     "metal-k8s-1.21",
     "aws-k8s-1.21-nvidia",
