--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "aws-k8s-1.22-nvidia",
     "metal-dev",
     "metal-k8s-1.21",
+    "metal-k8s-1.22",
     "vmware-dev",
     "vmware-k8s-1.20",
     "vmware-k8s-1.21",
