grub: Set `private` variable via search
We currently carry a few patches to enable `search` by partition label
and uuid, but don't include the `search` module.  This commit adds the
module to enable this functionality in our grub config.

This commit also adds an additional command to our grub configs.  The
command uses the `search` module to set the `private` variable to the
location of the `BOTTLEROCKET-PRIVATE` partition.  The `private`
variable will be used to populate the grub menuentry that points to the
bootconfig file.

--- a/packages/grub/efi.cfg
+++ b/packages/grub/efi.cfg
@@ -4,6 +4,7 @@ gptprio.next -d boot_dev -u boot_uuid
 set root=$boot_dev
 set prefix=($root)/grub
 export boot_uuid
+search --no-floppy --set private --part-label BOTTLEROCKET-PRIVATE
 configfile /grub/grub.cfg
 echo "boot failed (device ($boot_dev), uuid $boot_uuid)"
 echo "rebooting in 30 seconds..."
