host-containers: update default control container to v0.6.0

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -44,7 +44,9 @@ members = [
     "api/migration/migrations/v1.6.2/container-registry-credentials",
     "api/migration/migrations/v1.6.2/container-registry-credentials-metadata",
     "api/migration/migrations/v1.7.0/aws-admin-container-v0-8-0",
+    "api/migration/migrations/v1.7.0/aws-control-container-v0-6-0",
     "api/migration/migrations/v1.7.0/public-admin-container-v0-8-0",
+    "api/migration/migrations/v1.7.0/public-control-container-v0-6-0",
 
     "bottlerocket-release",
 
