--- a/Release.toml
+++ b/Release.toml
@@ -108,5 +108,7 @@ version = "1.6.2"
 ]
 "(1.6.2, 1.7.0)" = [
     "migrate_v1.7.0_aws-admin-container-v0-8-0.lz4",
+    "migrate_v1.7.0_aws-control-container-v0-6-0.lz4",
     "migrate_v1.7.0_public-admin-container-v0-8-0.lz4",
+    "migrate_v1.7.0_public-control-container-v0-6-0.lz4",
 ]
