--- a/sources/api/apiclient/Cargo.toml
+++ b/sources/api/apiclient/Cargo.toml
@@ -16,9 +16,7 @@ futures = { version = "0.3", default-features = false }
 futures-channel = { version = "0.3", default-features = false }
 http = "0.2"
 httparse = "1.5"
-# Ensure we use exactly hyper 0.14.2 which is the last version that does not emit a cdylib
-# See this issue for tracking https://github.com/bottlerocket-os/bottlerocket/issues/1471
-hyper = { version = "=0.14.2", default-features = false, features = [ "client", "http1", "http2" ] }
+hyper = { version = "0.14.2", default-features = false, features = [ "client", "http1", "http2" ] }
 hyper-unix-connector = "0.2"
 libc = "0.2"
 log = "0.4"
