--- a/sources/cfsignal/Cargo.toml
+++ b/sources/cfsignal/Cargo.toml
@@ -17,7 +17,7 @@ tokio = { version = "~1.14", default-features = false, features = ["macros", "rt
 rusoto_core = { version = "0.47.0", default-features = false, features = ["rustls"] }
 rusoto_cloudformation = { version = "0.47.0", default-features = false, features = ["rustls"] }
 imdsclient = { path = "../imdsclient", version = "0.1.0" }
-hyper = "=0.14.2"
+hyper = "0.14.2"
 
 [build-dependencies]
 cargo-readme = "3.1"
