ca-certificates: restart container runtimes when certificates store changes
The containerd and docker daemons cache the certificates store, so any
updates to the store will be ignored by the daemons. With this, the
daemons will be restarted whenever the certificates store is updated.

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/Release.toml
+++ b/Release.toml
@@ -123,4 +123,5 @@ version = "1.7.2"
     "migrate_v1.8.0_etc-hosts.lz4",
     "migrate_v1.8.0_etc-hosts-metadata.lz4",
     "migrate_v1.8.0_cluster-dns-ip-list.lz4",
+    "migrate_v1.8.0_pki-affected-services.lz4"
 ]
