--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -56,6 +56,7 @@ members = [
     "api/migration/migrations/v1.8.0/etc-hosts",
     "api/migration/migrations/v1.8.0/etc-hosts-metadata",
     "api/migration/migrations/v1.8.0/cluster-dns-ip-list",
+    "api/migration/migrations/v1.8.0/pki-affected-services",
 
     "bottlerocket-release",
 
