--- a/packages/kmod-5.10-nvidia/nvidia-tmpfiles.conf.in
+++ b/packages/kmod-5.10-nvidia/nvidia-tmpfiles.conf.in
@@ -1,1 +1,2 @@
-D /lib/modules/__KERNEL_VERSION__/kernel/drivers/extra/video/nvidia/tesla 0755 root root -
+R __PREFIX__/lib/modules/__KERNEL_VERSION__/kernel/drivers/extra/video/nvidia/tesla - - - - -
+d __PREFIX__/lib/modules/__KERNEL_VERSION__/kernel/drivers/extra/video/nvidia/tesla 0755 root root - -
