variants: Add `set-private-var` to grub-features for metal variants
This change adds the `set-private-var` parameter to new `grub-features`
section of the variant config for all metal variants.

--- a/variants/metal-dev/Cargo.toml
+++ b/variants/metal-dev/Cargo.toml
@@ -19,6 +19,9 @@ kernel-parameters = [
     # Only reserve if there are at least 2GB
     "crashkernel=2G-:256M"
 ]
+grub-features = [
+    "set-private-var"
+]
 
 included-packages = [
 # core
