--- a/variants/metal-k8s-1.22/Cargo.toml
+++ b/variants/metal-k8s-1.22/Cargo.toml
@@ -28,6 +28,9 @@ included-packages = [
     "kubelet-1.22",
     "release",
 ]
+grub-features = [
+    "set-private-var"
+]
 
 [lib]
 path = "lib.rs"
