--- a/Release.toml
+++ b/Release.toml
@@ -114,3 +114,7 @@ version = "1.7.2"
 ]
 "(1.7.0, 1.7.1)" = []
 "(1.7.1, 1.7.2)" = []
+"(1.7.2, 1.8.0)" = [
+    "migrate_v1.8.0_boot-setting.lz4",
+    "migrate_v1.8.0_boot-setting-metadata.lz4",
+]
