--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -48,6 +48,8 @@ members = [
     "api/migration/migrations/v1.7.0/aws-control-container-v0-6-0",
     "api/migration/migrations/v1.7.0/public-admin-container-v0-8-0",
     "api/migration/migrations/v1.7.0/public-control-container-v0-6-0",
+    "api/migration/migrations/v1.8.0/boot-setting",
+    "api/migration/migrations/v1.8.0/boot-setting-metadata",
 
     "bottlerocket-release",
 
