Add support for ECS Agent parameters ImagePullBehavior and WarmPoolsSupport
They be configured using the keys:
settings.ecs.image-pull-behavior: (default*|always|once|prefer-cached)
settings.autoscaling.should-wait: (true|false*)

WarmPoolsSupport use a more generic key settings, as for advice of
@bcressey, this way it can be used, in future, for other variants.
At the moment `settings.autoscaling.should-wait` is used only for the
aws-ecs* variants.

--- a/Release.toml
+++ b/Release.toml
@@ -118,4 +118,6 @@ version = "1.7.2"
     "migrate_v1.8.0_boot-setting.lz4",
     "migrate_v1.8.0_boot-setting-metadata.lz4",
     "migrate_v1.8.0_kubelet-pod-pids-limit.lz4",
+    "migrate_v1.8.0_add-pull-behavior.lz4",
+    "migrate_v1.8.0_add-autoscaling.lz4",
 ]
