--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -51,6 +51,8 @@ members = [
     "api/migration/migrations/v1.8.0/boot-setting",
     "api/migration/migrations/v1.8.0/boot-setting-metadata",
     "api/migration/migrations/v1.8.0/kubelet-pod-pids-limit",
+    "api/migration/migrations/v1.8.0/add-pull-behavior",
+    "api/migration/migrations/v1.8.0/add-autoscaling",
 
     "bottlerocket-release",
 
