--- a/sources/api/netdog/Cargo.toml
+++ b/sources/api/netdog/Cargo.toml
@@ -12,6 +12,7 @@ exclude = ["README.md"]
 argh = "0.1.4"
 dns-lookup = "1.0"
 ipnet = { version = "2.0", features = ["serde"] }
+indexmap = { version = "1.8", features = ["serde"]}
 envy = "0.4"
 lazy_static = "1.2"
 rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
@@ -19,7 +20,9 @@ regex = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 serde_plain = "1.0"
+serde-xml-rs = "0.5"
 snafu = "0.7"
+toml = { version = "0.5", features = ["preserve_order"] }
 
 [build-dependencies]
 cargo-readme = "3.1"
