--- a/packages/wicked/wicked-tmpfiles.conf
+++ b/packages/wicked/wicked-tmpfiles.conf
@@ -2,6 +2,7 @@ C /etc/wicked/client.xml - - - -
 C /etc/wicked/common.xml - - - -
 C /etc/wicked/nanny.xml - - - -
 C /etc/wicked/server.xml - - - -
+d /etc/wicked/ifconfig 0700 root root -
 
 d /var/lib/wicked 0700 root root -
 Z /var/lib/wicked 0700 root root -
