--- a/variants/aws-k8s-1.22-nvidia/Cargo.toml
+++ b/variants/aws-k8s-1.22-nvidia/Cargo.toml
@@ -26,6 +26,8 @@ included-packages = [
 kernel-parameters = [
     "console=tty0",
     "console=ttyS0,115200n8",
+    "net.ifnames=0",
+    "netdog.default-interface=eth0:dhcp4,dhcp6?",
 ]
 
 [lib]
