--- a/variants/vmware-k8s-1.22/Cargo.toml
+++ b/variants/vmware-k8s-1.22/Cargo.toml
@@ -19,7 +19,9 @@ kernel-parameters = [
     "console=ttyS0,115200n8",
     "console=tty1",
     # Only reserve if there are at least 2GB
-    "crashkernel=2G-:256M"
+    "crashkernel=2G-:256M",
+    "net.ifnames=0",
+    "netdog.default-interface=eth0:dhcp4,dhcp6?",
 ]
 included-packages = [
     "cni",
