--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "aws-dev",
     "aws-ecs-1",
+    "aws-ecs-1-nvidia",
     "aws-k8s-1.19",
     "aws-k8s-1.20",
     "aws-k8s-1.21",
