prairiedog: add boot config functionality
 - Adds new subcommand `generate-boot-config` to generate an initrd
image file with boot config contents populated from Bottlerocket boot
settings.
 - Adds new subcommand `generate-boot-settings` to generate bottlerocket
settings from kernel's bootconfig file at `/proc/bootconfig`

Moves prairiedog from `sources/prairiedog` to `sources/api/prairiedog`
now that it needs to query from the Bottlerocket API and need settings
model information.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "api/migration/migrator",
     "api/migration/migration-helpers",
     "api/shibaken",
+    "api/prairiedog",
 
     # "api/migration/migrations/vX.Y.Z/..."
     "api/migration/migrations/v1.3.0/etc-hosts-service",
@@ -57,8 +58,6 @@ members = [
     "ghostdog",
 
     "growpart",
-
-    "prairiedog",
 
     "metricdog",
 
