--- a/Release.toml
+++ b/Release.toml
@@ -120,4 +120,6 @@ version = "1.7.2"
     "migrate_v1.8.0_kubelet-pod-pids-limit.lz4",
     "migrate_v1.8.0_add-pull-behavior.lz4",
     "migrate_v1.8.0_add-autoscaling.lz4",
+    "migrate_v1.8.0_etc-hosts.lz4",
+    "migrate_v1.8.0_etc-hosts-metadata.lz4",
 ]
