buildsys: standardize variant concepts
We had several crates that interpreted the VARIANT env variable in
different ways in build.rs. This standardizes the treatment of the
VARIANT variable by centralizing it in a new buildsys library.

--- a/sources/api/ecs-settings-applier/Cargo.toml
+++ b/sources/api/ecs-settings-applier/Cargo.toml
@@ -21,4 +21,5 @@ snafu = "0.7"
 tokio = { version = "~1.14", default-features = false, features = ["macros", "rt-multi-thread"] }  # LTS
 
 [build-dependencies]
+buildsys = { path = "../../../tools/buildsys", version = "0.1.0" }
 cargo-readme = "3.1"
