--- a/sources/logdog/Cargo.toml
+++ b/sources/logdog/Cargo.toml
@@ -26,4 +26,5 @@ url = "2.1.1"
 walkdir = "2.3"
 
 [build-dependencies]
+buildsys = { path = "../../tools/buildsys", version = "0.1.0" }
 cargo-readme = "3.1"
