--- a/sources/api/early-boot-config/Cargo.toml
+++ b/sources/api/early-boot-config/Cargo.toml
@@ -33,6 +33,7 @@ toml = "0.5"
 vmw_backdoor = "0.2"
 
 [build-dependencies]
+buildsys = { path = "../../../tools/buildsys", version = "0.1.0" }
 cargo-readme = "3.1"
 
 [dev-dependencies]
