--- a/sources/api/static-pods/Cargo.toml
+++ b/sources/api/static-pods/Cargo.toml
@@ -23,4 +23,5 @@ tokio = { version = "~1.14", default-features = false, features = ["macros", "rt
 tempfile = "3.2.0"
 
 [build-dependencies]
+buildsys = { path = "../../../tools/buildsys", version = "0.1.0" }
 cargo-readme = "3.1"
