--- a/sources/api/storewolf/Cargo.toml
+++ b/sources/api/storewolf/Cargo.toml
@@ -22,6 +22,7 @@ snafu = "0.7"
 toml = "0.5"
 
 [build-dependencies]
+buildsys = { path = "../../../tools/buildsys", version = "0.1.0" }
 cargo-readme = "3.1"
 merge-toml = { path = "merge-toml", version = "0.1.0" }
 # We have a models build-dep because we read default settings from the models
