--- a/sources/deny.toml
+++ b/sources/deny.toml
@@ -73,6 +73,9 @@ skip-tree = [
 
     # reqwest uses an older rustls-pemfile
     { name = "reqwest", version = "0.11.10" },
+
+    # rusoto_signature uses an older version of sha2
+    { name = "rusoto_signature" },
 ]
 
 [sources]
