buildsys: generate_readme
We had readme generating code pasted into most of our build.rs file.
This has now been moved to a public function in the buildsys lib so
that the code is not duplicated.

--- a/sources/api/datastore/Cargo.toml
+++ b/sources/api/datastore/Cargo.toml
@@ -19,7 +19,7 @@ snafu = "0.7"
 walkdir = "2.2"
 
 [build-dependencies]
-cargo-readme = "3.1"
+buildsys = { path = "../../../tools/buildsys", version = "0.1.0" }
 
 [dev-dependencies]
 maplit = "1.0"
