--- a/sources/api/apiserver/Cargo.toml
+++ b/sources/api/apiserver/Cargo.toml
@@ -36,7 +36,7 @@ thar-be-updates = { path = "../thar-be-updates", version = "0.1.0" }
 walkdir = "2.2"
 
 [build-dependencies]
-cargo-readme = "3.1"
+buildsys = { path = "../../../tools/buildsys", version = "0.1.0" }
 
 [dev-dependencies]
 maplit = "1.0"
