--- a/sources/api/migration/migrator/Cargo.toml
+++ b/sources/api/migration/migrator/Cargo.toml
@@ -25,7 +25,7 @@ update_metadata = { path = "../../../updater/update_metadata", version = "0.1.0"
 url = "2.1.1"
 
 [build-dependencies]
-cargo-readme = "3.1"
+buildsys = { path = "../../../../tools/buildsys", version = "0.1.0" }
 
 [dev-dependencies]
 chrono = "0.4.11"
