--- a/sources/api/prairiedog/Cargo.toml
+++ b/sources/api/prairiedog/Cargo.toml
@@ -26,4 +26,4 @@ tokio = { version = "~1.14", default-features = false, features = ["macros", "rt
 maplit = "1.0"
 
 [build-dependencies]
-cargo-readme = "3.1"
+buildsys = { path = "../../../tools/buildsys", version = "0.1.0" }
