--- a/sources/api/schnauzer/Cargo.toml
+++ b/sources/api/schnauzer/Cargo.toml
@@ -29,4 +29,4 @@ url = "2.1"
 num_cpus = "1.0"
 
 [build-dependencies]
-cargo-readme = "3.1"
+buildsys = { path = "../../../tools/buildsys", version = "0.1.0" }
