--- a/sources/bottlerocket-release/Cargo.toml
+++ b/sources/bottlerocket-release/Cargo.toml
@@ -16,4 +16,4 @@ serde = { version = "1.0", features = ["derive"] }
 snafu = "0.7"
 
 [build-dependencies]
-cargo-readme = "3.1"
+buildsys = { path = "../../tools/buildsys", version = "0.1.0" }
