--- a/sources/constants/Cargo.toml
+++ b/sources/constants/Cargo.toml
@@ -11,4 +11,4 @@ exclude = ["README.md"]
 [dependencies]
 
 [build-dependencies]
-cargo-readme = "3.1"
+buildsys = { path = "../../tools/buildsys", version = "0.1.0" }
