--- a/sources/imdsclient/Cargo.toml
+++ b/sources/imdsclient/Cargo.toml
@@ -20,7 +20,7 @@ tokio-retry = "0.3"
 url = "2.1.1"
 
 [build-dependencies]
-cargo-readme = "3.1"
+buildsys = { path = "../../tools/buildsys", version = "0.1.0" }
 
 [dev-dependencies]
 httptest = "0.15"
