--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "aws-k8s-1.21-nvidia",
     "aws-k8s-1.22",
     "aws-k8s-1.22-nvidia",
+    "aws-k8s-1.23",
     "metal-dev",
     "metal-k8s-1.21",
     "metal-k8s-1.22",
