Add aws-k8s-1.23-nvidia variant
Adds aws-k8s-1.23-nvidia variant, create symlinks for previous k8s
version nvidia variant in models.

aws-k8s-1.23-nvidia supports boot config settings while other nvidia
variants do not.

--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "aws-k8s-1.22",
     "aws-k8s-1.22-nvidia",
     "aws-k8s-1.23",
+    "aws-k8s-1.23-nvidia",
     "metal-dev",
     "metal-k8s-1.21",
     "metal-k8s-1.22",
