Add vmware-k8s-1.23 variant
Adds vmware-k8s-1.23 variant, relinks symlinks in models
vmware-k8s-1.23 supports boot config settings in models.

Rename symlink for oci-hooks in vmware-k8s-1.22

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,10 @@ jobs:
             arch: x86_64
             supported: true
             fetch-upstream: "false"
+          - variant: vmware-k8s-1.23
+            arch: x86_64
+            supported: true
+            fetch-upstream: "false"
           - variant: aws-k8s-1.21-nvidia
             arch: x86_64
             supported: true
