Add metal-k8s-1.23 variant
This change adds an additional variant `metal-k8s-1.23`, which includes
necessary Kubernetes packages and settings for running Bottlerocket on
metal in a Kubernetes v1.23 cluster.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,10 @@ jobs:
             arch: x86_64
             supported: false
             fetch-upstream: "false"
+          - variant: metal-k8s-1.23
+            arch: x86_64
+            supported: false
+            fetch-upstream: "false"
           - variant: vmware-k8s-1.20
             arch: x86_64
             supported: true
