--- a/packages/release/lib-modules.mount.in
+++ b/packages/release/lib-modules.mount.in
@@ -1,5 +1,6 @@
 [Unit]
 Description=Kernel Modules (Read-Write)
+DefaultDependencies=no
 Conflicts=umount.target
 Before=local-fs.target umount.target
 Wants=prepare-local.service
