--- a/packages/release/usr-share-licenses.mount.in
+++ b/packages/release/usr-share-licenses.mount.in
@@ -1,7 +1,9 @@
 [Unit]
 Description=License files
+DefaultDependencies=no
 Conflicts=umount.target
 Before=local-fs.target umount.target
+After=local-fs-pre.target
 
 [Mount]
 What=PREFIX/share/bottlerocket/licenses.squashfs
