--- a/packages/release/usr-src-kernels.mount.in
+++ b/packages/release/usr-src-kernels.mount.in
@@ -1,5 +1,6 @@
 [Unit]
 Description=Kernel Development Sources (Read-Write)
+DefaultDependencies=no
 Conflicts=umount.target
 RequiresMountsFor=/var/lib/kernel-devel/.overlay/lower
 Before=local-fs.target umount.target
