--- a/packages/release/var-lib-kernel-devel-lower.mount.in
+++ b/packages/release/var-lib-kernel-devel-lower.mount.in
@@ -9,7 +9,7 @@ Before=local-fs.target umount.target
 What=PREFIX/share/bottlerocket/kernel-devel.squashfs
 Where=/var/lib/kernel-devel/.overlay/lower
 Type=squashfs
-Options=defaults,ro,loop,noatime,nosuid,nodev,context=system_u:object_r:os_t:s0
+Options=defaults,ro,loop,nosuid,nodev,noexec,noatime,context=system_u:object_r:os_t:s0
 
 [Install]
 WantedBy=preconfigured.target
