--- a/sources/api/pluto/Cargo.toml
+++ b/sources/api/pluto/Cargo.toml
@@ -14,11 +14,13 @@ apiclient = { path = "../apiclient", version = "0.1.0" }
 constants = { path = "../../constants", version = "0.1.0" }
 hyper = "0.14.2"
 hyper-proxy = {  version = "0.9", default-features = false, features = ["rustls"] }
-hyper-rustls = "0.23"
+hyper-rustls = { version = "0.23", default-features = false, features = ["http2", "native-tokio", "tls12", "logging"] }
 imdsclient = { path = "../../imdsclient", version = "0.1.0" }
 models = { path = "../../models", version = "0.1.0" }
-rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
-rusoto_eks = { version = "0.48.0", default-features = false, features = ["rustls"] }
+aws-config = "0.46.0"
+aws-sdk-eks = "0.16.0"
+aws-types = "0.46.0"
+aws-smithy-client = { version = "0.46.0", default-features = false, features = ["rustls"] }
 serde_json = "1"
 snafu = "0.7"
 tokio = { version = "~1.14", default-features = false, features = ["macros", "rt-multi-thread"] }  # LTS
