--- a/sources/cfsignal/Cargo.toml
+++ b/sources/cfsignal/Cargo.toml
@@ -14,8 +14,9 @@ simplelog = "0.12"
 snafu = { version = "0.7" }
 toml = "0.5.1"
 tokio = { version = "~1.14", default-features = false, features = ["macros", "rt-multi-thread"] }
-rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
-rusoto_cloudformation = { version = "0.48.0", default-features = false, features = ["rustls"] }
+aws-config = "0.46.0"
+aws-sdk-cloudformation = "0.16.0"
+aws-types = "0.46.0"
 imdsclient = { path = "../imdsclient", version = "0.1.0" }
 hyper = "0.14.2"
 
