Added template for config file to be generated with eks-autoscaling.should-wait value of the host Created ascwp.service to execute helper program prior to kubelet

--- a/sources/models/shared-defaults/kubernetes-aws.toml
+++ b/sources/models/shared-defaults/kubernetes-aws.toml
@@ -21,3 +21,11 @@ service-checks = ["apiserver", "chronyd", "containerd", "host-containerd", "kube
 
 [metadata.settings.network]
 affected-services = ["containerd", "kubernetes", "host-containerd", "host-containers"]
+
+# AutoScaling
+[settings.eks-autoscaling]
+should-wait = false
+
+[configuration-files.ascwp-toml]
+path = "/etc/ascwp.toml"
+template-path = "/usr/share/templates/ascwp-toml"
