--- a/Release.toml
+++ b/Release.toml
@@ -141,4 +141,5 @@ version = "1.10.0"
     "migrate_v1.9.0_updates-targets-base-url.lz4",
 ]
 "(1.9.0, 1.10.0)" = [
+    "migrate_v1.10.0_add-eks-autoscaling.lz4",
 ]
