kernel: scope variant sensitivity to platform
Kernel support for various hardware depends on the target platform,
and not other attributes of the variant like the orchestrator agent.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/kernel-5.15/Cargo.toml
+++ b/packages/kernel-5.15/Cargo.toml
@@ -6,7 +6,7 @@ publish = false
 build = "build.rs"
 
 [package.metadata.build-package]
-variant-sensitive = true
+variant-sensitive = "platform"
 package-name = "kernel-5.15"
 
 [lib]
